--- a/04-linear-regression/01-model.ipynb
+++ b/04-linear-regression/01-model.ipynb
@@ -6,6 +6,27 @@
    "id": "0",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Packages\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
