--- a/04-linear-regression/01-model.ipynb
+++ b/04-linear-regression/01-model.ipynb
@@ -22,9 +22,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the California House price data from Scikit-learn\n",
+    "X, y = fetch_california_housing(return_X_y=True, as_frame=True)\n",
+    "X = X.drop(columns=[\"Latitude\", \"Longitude\"])\n",
+    "\n",
+    "# display top 5 rows\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": []
