Visualize target and predictors' distribution

--- a/04-linear-regression/01-model.ipynb
+++ b/04-linear-regression/01-model.ipynb
@@ -45,9 +45,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "## Visualize data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the target distribution\n",
+    "\n",
+    "y.hist(bins=20)\n",
+    "plt.xlabel(\"House price\")\n",
+    "plt.ylabel(\"Number of houses\")\n",
+    "plt.title(\"Distribution of House Prices - target\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display variables distribution\n",
+    "\n",
+    "X.hist(bins=50, figsize=(10, 12))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": []
