--- a/04-linear-regression/01-model.ipynb
+++ b/04-linear-regression/01-model.ipynb
@@ -82,9 +82,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "## Split data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's separate the data into training and testing set\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=0)\n",
+    "\n",
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "## Scale data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler().set_output(transform=\"pandas\").fit(X_train)\n",
+    "\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "## Modeling with Scikit-Learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit model\n",
+    "\n",
+    "linreg = LinearRegression().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R2 in the train set\n",
+    "\n",
+    "linreg.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R2 in the test set\n",
+    "\n",
+    "linreg.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "The model explains about 50% of the variability in the target variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot residuals - train set\n",
+    "\n",
+    "residuals = y_train - linreg.predict(X_train)\n",
+    "\n",
+    "residuals.hist(bins=20)\n",
+    "plt.title(\"Residuals - train set\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot residuals - test set\n",
+    "\n",
+    "residuals = y_test - linreg.predict(X_test)\n",
+    "\n",
+    "residuals.hist(bins=20)\n",
+    "plt.title(\"Residuals - test set\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": []
