--- a/04-linear-regression/01-model.ipynb
+++ b/04-linear-regression/01-model.ipynb
@@ -210,12 +210,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "17",
    "metadata": {},
+   "source": [
+    "The residuals are fairly normally distributed and centered at 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# coefficients\n",
+    "\n",
+    "pd.Series(linreg.coef_, index=linreg.feature_names_in_)"
+   ]
   }
  ],
  "metadata": {
