Evaluate model - F and p-value calculated

--- a/04-linear-regression/01-model.ipynb
+++ b/04-linear-regression/01-model.ipynb
@@ -228,6 +228,144 @@
     "\n",
     "pd.Series(linreg.coef_, index=linreg.feature_names_in_)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
+    "We need to calculate all the statistics manually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SST - total sum of squares\n",
+    "\n",
+    "SST = np.sum((y_train - y_train.mean())**2)\n",
+    "\n",
+    "SST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SSR - sum of the squares of the residuals\n",
+    "\n",
+    "SSR = np.sum((y_train - linreg.predict(X_train))**2)\n",
+    "\n",
+    "SSR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SSM - sum of squares of the model\n",
+    "\n",
+    "SSM = SST - SSR\n",
+    "\n",
+    "SSM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R2 - fraction of variability explained by the model\n",
+    "\n",
+    "SSM / SST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean sum of squares of the model\n",
+    "\n",
+    "df1 = len(X_train.columns) # df1: degree of freedom\n",
+    "\n",
+    "MSM = SSM / df1\n",
+    "\n",
+    "MSM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean sum of squares of the residuals\n",
+    "\n",
+    "df2 = (len(X_train)-len(X_train.columns))\n",
+    "\n",
+    "MSR = SSR / df2\n",
+    "\n",
+    "MSR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# F-ratio\n",
+    "\n",
+    "F = MSM/MSR\n",
+    "\n",
+    "F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# p-value\n",
+    "\n",
+    "p_value = 1 - stats.f.cdf(F, df1, df2)\n",
+    "\n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
