Model with StatsModels

--- a/04-linear-regression/01-model.ipynb
+++ b/04-linear-regression/01-model.ipynb
@@ -382,9 +382,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30",
+   "metadata": {},
+   "source": [
+    "## Stats models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Our model needs an intercept, so we add a column of 1 s:\n",
+    "\n",
+    "X_train = sm.add_constant(X_train)\n",
+    "X_test = sm.add_constant(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit model\n",
+    "\n",
+    "linreg = sm.OLS(y_train, X_train)\n",
+    "results = linreg.fit()\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot residuals - train set\n",
+    "\n",
+    "residuals = y_train - results.get_prediction().summary_frame()[\"mean\"]\n",
+    "\n",
+    "residuals.hist(bins=20)\n",
+    "plt.title(\"Residuals - train set\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot residuals - test set\n",
+    "\n",
+    "residuals = y_test - results.get_prediction(X_test).summary_frame()[\"mean\"]\n",
+    "\n",
+    "residuals.hist(bins=20)\n",
+    "plt.title(\"Residuals - test set\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35",
+   "metadata": {},
+   "source": [
+    "We have a decent linear model. How do we make global and local interpretations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
