Load and display data

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -31,6 +31,37 @@
     "\n",
     "import statsmodels.api as sm"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the California House price data from Scikit-learn\n",
+    "X, y = fetch_california_housing(return_X_y=True, as_frame=True)\n",
+    "X = X.drop(columns=[\"Latitude\", \"Longitude\"])\n",
+    "\n",
+    "# display top 5 rows\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
