--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -56,12 +56,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4",
    "metadata": {},
+   "source": [
+    "## Train 500 models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Train 500 models on different partitions of x\n",
+    "\n",
+    "s = dict()\n",
+    "linreg = None\n",
+    "\n",
+    "for i in np.linspace(1, 500, num=500):\n",
+    "\n",
+    "    # Split data\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=0.3, random_state=int(i))\n",
+    "\n",
+    "    # Train model\n",
+    "    linreg = LinearRegression().fit(X_train, y_train)\n",
+    "\n",
+    "    # Store coefficients\n",
+    "    s[str(int(i))] = pd.Series(linreg.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Put coefficients in a dataframe\n",
+    "\n",
+    "df = pd.concat(s, axis=1)\n",
+    "df.index = linreg.feature_names_in_\n",
+    "df = df.T\n",
+    "\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
