--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -103,6 +103,40 @@
     "\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display variability of coefficients\n",
+    "\n",
+    "df.hist(bins=30, figsize=(10,12))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarize variability of coefficients\n",
+    "\n",
+    "coeff_summary = df.agg(['mean', 'std'])\n",
+    "coeff_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
