--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -131,9 +131,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "## Coefficient direction (sign)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = pd.Series(\n",
+    "    coeff_summary.loc['mean'],\n",
+    "    index=linreg.feature_names_in_\n",
+    ")\n",
+    "\n",
+    "s.plot.bar(yerr=coeff_summary.loc['std'])\n",
+    "plt.ylabel('Beta')\n",
+    "plt.title('Coefficient value (slope)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "We can see that the variability of the coefficients is different. AveOccup/AveBedrms seems to be the most variable. In other words, it has the biggest estimation error.\n",
+    "We can also see that the variables AveRooms and AveBedrms have opposite directions. We'd expect them, intuitively, to have the same direction. And we also expect those variables to be highly correlated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": []
