Scale predictors values & retrain models

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -51,6 +51,9 @@
     "X, y = fetch_california_housing(return_X_y=True, as_frame=True)\n",
     "X = X.drop(columns=[\"Latitude\", \"Longitude\"])\n",
     "\n",
+    "# scale the variables\n",
+    "X = MinMaxScaler().set_output(transform=\"pandas\").fit_transform(X)\n",
+    "\n",
     "# display top 5 rows\n",
     "X.head()"
    ]
@@ -161,8 +164,8 @@
    "id": "11",
    "metadata": {},
    "source": [
-    "We can see that the variability of the coefficients is different. AveOccup/AveBedrms seems to be the most variable. In other words, it has the biggest estimation error.\n",
-    "We can also see that the variables AveRooms and AveBedrms have opposite directions. We'd expect them, intuitively, to have the same direction. And we also expect those variables to be highly correlated."
+    "We can see that the variability of the coefficients is different. AveOccup seems to be the most variable. In other words, it has the biggest estimation error.\n",
+    "We can also see that the variables AveRooms and AveBedrms have opposite directions. We'd, intuitively, expect them to have the same direction. And we also expect those variables to be highly correlated."
    ]
   },
   {
