Visualize feature importance

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -172,12 +172,44 @@
    "cell_type": "markdown",
    "id": "12",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Compare Absolute Values of Coefficients - Feature Importance\n",
+    "\n",
+    "This is what is normally used as a measure of feature importance. Here we determine the contribution of each feature to the target."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot mean coefficient and std\n",
+    "\n",
+    "s = pd.Series(\n",
+    "    np.abs(coeff_summary.loc['mean']),\n",
+    "    index=linreg.feature_names_in_\n",
+    ")\n",
+    "\n",
+    "s.plot.bar(yerr=coeff_summary.loc['std'])\n",
+    "plt.ylabel('Absolute coefficient values')\n",
+    "plt.title('Absolute coefficient values')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "From the previous plot, we'd expect the variables AveRooms and AveBedrms to be the ones with the highest importance. However, the coefficients for those variables also show more variability or a bigger error. Consequently, we can trust them less."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": []
