Estimate and plot t

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -207,9 +207,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15",
+   "metadata": {},
+   "source": [
+    "## t"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Estimate and plot t\n",
+    "\n",
+    "s = pd.Series(\n",
+    "    np.abs(coeff_summary.loc['mean'])/coeff_summary.loc['std'],\n",
+    "    index=linreg.feature_names_in_\n",
+    ")\n",
+    "\n",
+    "s.plot.bar()\n",
+    "plt.ylabel('t')\n",
+    "plt.title('t')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "After correction of the coefficients by their respective error, MedInc appears to be a most robust predictor for house price."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": []
