Compute average R2 and STD from cross-validation

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_validate\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "import statsmodels.api as sm"
@@ -77,6 +77,7 @@
     "\n",
     "s = dict()\n",
     "linreg = None\n",
+    "X_train, X_test, y_train, y_test = None, None, None, None\n",
     "\n",
     "for i in np.linspace(1, 500, num=500):\n",
     "\n",
@@ -243,12 +244,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "18",
    "metadata": {},
+   "source": [
+    "## Cross Validation\n",
+    "\n",
+    "We won't probably need to train 500 models to obtain the coefficient errors, but we could infer them by using cross-validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We use cross validation to estimate the coefficient variability\n",
+    "\n",
+    "results = cross_validate(\n",
+    "    estimator=linreg,\n",
+    "    X=X_train,\n",
+    "    y=y_train,\n",
+    "    scoring='r2',\n",
+    "    cv=5,\n",
+    "    return_train_score=True,\n",
+    "    return_estimator=True,\n",
+    ")\n",
+    "\n",
+    "pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R2 in train set\n",
+    "\n",
+    "print(\"R2 in train set: mean, std:\")\n",
+    "print(f\"{np.mean(results['train_score'])}, {np.std(results['train_score'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R2 in test set\n",
+    "\n",
+    "print(\"R2 in test set: mean, std:\")\n",
+    "print(f\"{np.mean(results['test_score'])}, {np.std(results['test_score'])}\")"
+   ]
   }
  ],
  "metadata": {
