Summarize coefficients variability and t

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -300,6 +300,49 @@
     "print(\"R2 in test set: mean, std:\")\n",
     "print(f\"{np.mean(results['test_score'])}, {np.std(results['test_score'])}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Collect  coefficients in dataframe\n",
+    "\n",
+    "coeffs = pd.DataFrame()\n",
+    "\n",
+    "estimator = None\n",
+    "for estimator in results['estimator']:\n",
+    "    coeffs = pd.concat([coeffs, pd.Series(estimator.coef_)], axis=1)\n",
+    "\n",
+    "coeffs.columns = [str(i) for i in range(1, 6)]\n",
+    "coeffs.index = estimator.feature_names_in_\n",
+    "\n",
+    "coeffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarize coefficient's variability and calculate t\n",
+    "\n",
+    "coeffs[['mean', 'std']] = coeffs.agg(['mean', 'std'], axis=1)\n",
+    "coeffs['t'] = coeffs['mean'] / coeffs['std']\n",
+    "coeffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
