Visualize coefficient directions & feature importance

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -337,9 +337,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24",
+   "metadata": {},
+   "source": [
+    "## Coefficient Direction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = pd.Series(\n",
+    "    coeffs['mean'],\n",
+    "    index=linreg.feature_names_in_\n",
+    ")\n",
+    "\n",
+    "s.plot.bar(yerr=coeffs['std'])\n",
+    "plt.ylabel('Beta')\n",
+    "plt.title('Coefficient Value (Slope)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "We get similar results to those obtained by training the 500 models above. We see that the errors are more conservative."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27",
+   "metadata": {},
+   "source": [
+    "## Coefficient Absolute Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot mean coefficient plus std\n",
+    "\n",
+    "coeffs['mean'].abs().plot.bar(yerr=coeffs['std'])\n",
+    "plt.ylabel('Mean coefficient')\n",
+    "plt.title('Coefficient')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "## t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot t\n",
+    "\n",
+    "coeffs['t'].abs().plot.bar()\n",
+    "plt.ylabel('t')\n",
+    "plt.title('Global feature importance')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31",
+   "metadata": {},
+   "source": [
+    "With cross-validation, we also see that MedInc is a more robust contributor to house price, but the difference to AveRooms and AveBedrms is smaller because the error of the coefficients was smaller. The error is smaller because we have less samples to estimate from."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
