Compute coefficient p-values

--- a/04-linear-regression/02-coefficients.ipynb
+++ b/04-linear-regression/02-coefficients.ipynb
@@ -425,12 +425,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "32",
    "metadata": {},
+   "source": [
+    "## p-Values\n",
+    "\n",
+    "With the value of t and the degrees of freedom, we can calculate the p-value for each coefficient, utilizing scipy.stats.\n",
+    "\n",
+    "**NB**: Probability of rejecting that the coefficient is close to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "coeffs['t']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Degrees of freedom\n",
+    "\n",
+    "N = np.round(len(X_train) / 5, 0) # Number of obs in each CV round\n",
+    "p = 6 # Number of features\n",
+    "\n",
+    "df = N - p - 1\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2 Tail t-test (the coefficients can be greater or smaller than 0)\n",
+    "\n",
+    "# the p-values\n",
+    "p_values = stats.t.sf(np.abs(coeffs['t']), df=df) * 2\n",
+    "p_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36",
+   "metadata": {},
+   "source": [
+    "All regression coefficients are significantly different from 0.\n",
+    "\n",
+    "Link about how to find the p-values with t-statistic: https://www.statology.org/p-value-from-t-score-python"
+   ]
   }
  ],
  "metadata": {
