--- a/04-linear-regression/02-feature-importance_coefficients-sklearn.ipynb
+++ b/04-linear-regression/02-feature-importance_coefficients-sklearn.ipynb
@@ -27,9 +27,7 @@
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split, cross_validate\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "import statsmodels.api as sm"
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
