Update intro in file 02-feature-~

--- a/04-linear-regression/02-feature-importance_coefficients-sklearn.ipynb
+++ b/04-linear-regression/02-feature-importance_coefficients-sklearn.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Linear Regression Coefficients Variability\n",
     "\n",
-    "This notebook focuses on the understanding the information provided by the linear regression model coefficients, and the calculation of their variability.\n"
+    "This notebook focuses on the understanding the information provided by the linear regression model coefficients, and the calculation of their variability, using Scikit-Learn.\n"
    ]
   },
   {
