Import needed packages

--- a/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
+++ b/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
@@ -1,12 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0",
    "metadata": {},
+   "source": [
+    "# Linear Regression Coefficients Variability\n",
+    "This notebook evaluates the variability of the coefficients of the linear regression models provided by statsmodels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# the dataset for the demo\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.feature_selection import f_regression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
   }
  ],
  "metadata": {
