--- a/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
+++ b/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
@@ -29,6 +29,54 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the California House price data from Scikit-learn\n",
+    "X, y = fetch_california_housing(return_X_y=True, as_frame=True)\n",
+    "X = X.drop(columns = [\"Latitude\", \"Longitude\"])\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = None, None, None, None\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=0,\n",
+    ")\n",
+    "\n",
+    "# Scale data\n",
+    "scaler = MinMaxScaler().set_output(transform=\"pandas\").fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "print('X_train shape: ', X_train.shape)\n",
+    "print('y_train shape: ', y_train.shape)\n",
+    "print('X_test shape: ', X_test.shape)\n",
+    "print('y_test shape: ', y_test.shape)\n",
+    "print()\n",
+    "\n",
+    "print('5 first rows in X_train:')\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
