--- a/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
+++ b/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
@@ -71,9 +71,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "## Train a Linear Regression Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Our model needs an intercept so we add a column of 1s:\n",
+    "\n",
+    "X_train = sm.add_constant(X_train)\n",
+    "X_test = sm.add_constant(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit model\n",
+    "\n",
+    "linreg = sm.OLS(y_train, X_train)\n",
+    "results = linreg.fit()\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": []
