Examine coefficient direction

--- a/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
+++ b/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
@@ -106,9 +106,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "## Coefficients direction (sign)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coefficients value\n",
+    "\n",
+    "s = pd.Series(\n",
+    "    results.params,\n",
+    "    index=X_train.columns,\n",
+    ")\n",
+    "\n",
+    "s.plot.bar(yerr=results.bse)\n",
+    "plt.ylabel(\"Coefficients' value\")\n",
+    "plt.title(\"Coefficients\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "We see that the variability of the coefficients is different.\n",
+    "\n",
+    "We also see that the variables `AveRooms` and `AveBdrms` have opposite direction. We'd expect, intuitively that they have the same direction. And we also expect these variables to be highly correlated.\n",
+    "\n",
+    "Note that the errors estimated by statsmodels are smaller than those observed with cross-validation in the previously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": []
