Plot absolute values - feature importance

--- a/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
+++ b/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
@@ -146,9 +146,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "## Coefficient absolute value - feature importance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot mean coefficient and std\n",
+    "\n",
+    "s = pd.Series(\n",
+    "    np.abs(results.params),\n",
+    "    index=X_train.columns,\n",
+    ")\n",
+    "\n",
+    "s.plot.bar(yerr=results.bse)\n",
+    "plt.ylabel(\"Absolute coefficient value\")\n",
+    "plt.title(\"Absolute coefficient value\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "From the previous plot, we'd expect the variables `AveRooms` and `AveBdrms` to be the ones with the highest importance. However, the coefficients for those variables also show more variability, or a bigger error. Then, we can trust them less."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": []
