Estimate and plot t

--- a/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
+++ b/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
@@ -185,12 +185,42 @@
    "cell_type": "markdown",
    "id": "13",
    "metadata": {},
-   "source": []
+   "source": [
+    "## t"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# estimate and plot t\n",
+    "\n",
+    "s = pd.Series(\n",
+    "    np.abs(results.tvalues),\n",
+    "    index=X_train.columns,\n",
+    ")\n",
+    "\n",
+    "s.plot.bar()\n",
+    "plt.ylabel(\"t\")\n",
+    "plt.title(\"t\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15",
+   "metadata": {},
+   "source": [
+    "After correcting the coefficient by its error, we see that `MedInc` is a more robust predictor of house price."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": []
