Plot target vs predictions with confidence limits

--- a/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
+++ b/04-linear-regression/03-feature-importance_coefficients-statsmodels.ipynb
@@ -218,12 +218,108 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "16",
    "metadata": {},
+   "source": [
+    "## Confidence intervals\n",
+    "\n",
+    "A link to a better explanation of the values we obtain when fitting `OLS`: https://stackoverflow.com/questions/60963178/what-does-obs-confidence-interval-in-statsmodels-linear-regression-in-python\n",
+    "\n",
+    "We will plot the predictions and their confidence intervals vs the truth, to get a better view of the model performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Obtain first 50 predictions for train set\n",
+    "\n",
+    "df = results.get_prediction(X_test.head(50)).summary_frame()\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add target variable to results\n",
+    "\n",
+    "df[\"true\"] = y_test.head(50)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort results by value of the prediction\n",
+    "\n",
+    "df = df.sort_values(by=[\"mean\"])\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PLot predictions vs target plus confidence intervals\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "ax.plot(df[\"mean\"], df[\"true\"], \"bo\")\n",
+    "ax.plot(df[\"mean\"], df[\"obs_ci_upper\"], \"r--\")\n",
+    "ax.plot(df[\"mean\"], df[\"obs_ci_lower\"], \"r--\")\n",
+    "ax.set_ylabel(\"House price\")\n",
+    "ax.set_xlabel(\"predictions\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot all results - entire dataset\n",
+    "\n",
+    "df = results.get_prediction(X_test).summary_frame()\n",
+    "df[\"true\"] = y_test\n",
+    "df = df.sort_values(by=[\"mean\"])\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "ax.plot(df[\"mean\"], df[\"true\"], \"bo\")\n",
+    "ax.plot(df[\"mean\"], df[\"obs_ci_upper\"], \"r--\")\n",
+    "ax.plot(df[\"mean\"], df[\"obs_ci_lower\"], \"r--\")\n",
+    "ax.set_ylabel(\"House price\")\n",
+    "ax.set_xlabel(\"Predictions\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.min(), y.max()"
+   ]
   }
  ],
  "metadata": {
