Write title +  introduction and import packages

--- a/04-linear-regression/04-local-interpretability-sklearn.ipynb
+++ b/04-linear-regression/04-local-interpretability-sklearn.ipynb
@@ -1,9 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# Local interpretability with Scikit-Learn\n",
+    "\n",
+    "This notebook we will evaluate the contribution of each feature to the target value, for a single observation.\n",
+    "\n",
+    "Based on [Christoph Molnar's book](https://christophm.github.io/interpretable-ml-book/limo.html#effect-plot)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Packages\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": []
