--- a/04-linear-regression/04-local-interpretability-sklearn.ipynb
+++ b/04-linear-regression/04-local-interpretability-sklearn.ipynb
@@ -31,9 +31,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the California House price data from Scikit-learn\n",
+    "X, y = fetch_california_housing(return_X_y=True, as_frame=True)\n",
+    "X = X.drop(columns = [\"Latitude\", \"Longitude\", \"AveBedrms\"])\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = None, None, None, None\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=0,\n",
+    ")\n",
+    "\n",
+    "# Scale data\n",
+    "scaler = MinMaxScaler().set_output(transform=\"pandas\").fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('X_train.shape:', X_train.shape)\n",
+    "print('X_test.shape:', X_test.shape)\n",
+    "print('y_train.shape:', y_train.shape)\n",
+    "print('y_test.shape:', y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": []
