Model linear regression & get coefficients

--- a/04-linear-regression/04-local-interpretability-sklearn.ipynb
+++ b/04-linear-regression/04-local-interpretability-sklearn.ipynb
@@ -75,9 +75,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "## Model a Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linreg = LinearRegression().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coeffs = pd.Series(linreg.coef_, index=linreg.feature_names_in_)\n",
+    "coeffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": []
