--- a/04-linear-regression/04-local-interpretability-sklearn.ipynb
+++ b/04-linear-regression/04-local-interpretability-sklearn.ipynb
@@ -104,9 +104,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "## Effect plots\n",
+    "\n",
+    "The effect is the coefficient multiplied by the feature value. If we do this for each observation, we can better understand the contribution of each feature to the target."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# multiply the coefficients by the feature values\n",
+    "\n",
+    "effects = coeffs * X_test\n",
+    "\n",
+    "# plot the effects\n",
+    "effects.boxplot(figsize=(8,6))\n",
+    "plt.ylabel(\"Effects (coeff x feature)\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": []
