Compute & visualize effects for local interpretability with Scikit-Learn

--- a/04-linear-regression/04-local-interpretability-sklearn.ipynb
+++ b/04-linear-regression/04-local-interpretability-sklearn.ipynb
@@ -130,12 +130,145 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "10",
    "metadata": {},
+   "source": [
+    "## Local interpretability\n",
+    "\n",
+    "Let's take an individual observation and evaluate how its feature values contribute towards house price."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let's pick up a few observations\n",
+    "\n",
+    "X_test.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper functions\n",
+    "\n",
+    "def get_observation_values(obv):\n",
+    "    \"\"\"Return values of an observation obs\"\"\"\n",
+    "    return X_test.loc[obv]\n",
+    "\n",
+    "def compute_effects(obv):\n",
+    "    \"\"\"Compute effect of an observation to the target\"\"\"\n",
+    "    return coeffs * get_observation_values(obv)\n",
+    "\n",
+    "def plot_effect(obv, obv_effect):\n",
+    "    \"\"\"Plot effect of an observation\"\"\"\n",
+    "    obv_effect.plot.bar()\n",
+    "\n",
+    "    plt.axhline(y=0, color='r', linestyle='-')\n",
+    "    plt.ylabel(\"Coefficient x feature value\")\n",
+    "    plt.title(f\"Local interpretability for {obv}\")\n",
+    "    plt.show()\n",
+    "\n",
+    "def show_observation_in_effects(obv_effect):\n",
+    "    \"\"\"overlay the individual observation to the effects\"\"\"\n",
+    "\n",
+    "    effects.boxplot(figsize=(8,6), positions=range(len(effects.columns)))\n",
+    "    plt.scatter(effects.columns, obv_effect,  marker='o', color=\"r\", s=50)\n",
+    "    plt.ylabel(\"Effects (coeff x feature)\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case: observation 12156\n",
+    "\n",
+    "obs = 12156\n",
+    "\n",
+    "get_observation_values(obs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "effect = compute_effects(obs)\n",
+    "effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot effects\n",
+    "plot_effect(obs, effect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# overlay the individual observation to the effects\n",
+    "show_observation_in_effects(effect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case: observation 2445\n",
+    "\n",
+    "obs = 2445\n",
+    "\n",
+    "get_observation_values(obs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot effects\n",
+    "effect = compute_effects(obs)\n",
+    "plot_effect(obs, effect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# overlay the individual observation to the effects\n",
+    "show_observation_in_effects(effect)"
+   ]
   }
  ],
  "metadata": {
