Clean import list in file 04

--- a/04-linear-regression/05-local-interpretability-statsmodels.ipynb
+++ b/04-linear-regression/05-local-interpretability-statsmodels.ipynb
@@ -1,12 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0",
    "metadata": {},
+   "source": [
+    "# Local interpretability\n",
+    "\n",
+    "This notebook will evaluate the contribution of each feature towards the target value, for a single observation, using StatsModels.\n",
+    "\n",
+    "Based on [Christoph Molnar's book](https://christophm.github.io/interpretable-ml-book/limo.html#effect-plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Packages\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
   }
  ],
  "metadata": {
