--- a/04-linear-regression/04-local-interpretability-sklearn.ipynb
+++ b/04-linear-regression/04-local-interpretability-sklearn.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
